# MATH5424-HW3

./: .gitignore  Cargo.toml  HW3.tex  newcommands
src/: main.rs  prob7.rs  prob8.rs
