[package]
name = "hw3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "problem7"
path = "src/prob7.rs"

[[bin]]
name = "problem8"
path = "src/prob8.rs"

[profile.dev]
opt-level = 1 # Use slightly better optimizations.

[dependencies]
image = "0.24.7"
nalgebra = "0.32.3"
num-traits = "0.2.17"
show-image = { version = "0.13.1", features = ["image"] }
